# MyOpenGL

./: CMakeLists.txt  ReadMe.md  main.cpp  main.cu  run.sh  test.cpp  test.h
include/: buffer.h  image.h  image.inl  ticktock.h
lib/: CMakeLists.txt
src/: image.cu  main.cu
